updates for textures

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,7 @@ include_directories(${SEV_INCLUDE_DIR})
 # Source files
 file(GLOB_RECURSE SOURCE_FILES "*.cc" "*.hh")
 
-add_executable(${APP} ${SOURCE_FILES})
+add_executable(${APP} ${SOURCE_FILES} src/examples/03_rectTextured/Example.cc src/examples/03_rectTextured/Example.hh)
 
 #Link the helloworld executable to the Qt 5 widgets library.
 target_link_libraries(${APP}
